# robotic_learning

./: bashrc_modificaitons.txt
ardrone_autonomy/: CMakeLists.txt  package.xml
ardrone_autonomy/ARDroneLib/FFMPEG/ffmpeg/: config.fate  config.h  config.mak
ardrone_autonomy/ARDroneLib/FFMPEG/ffmpeg/libavcodec/: libavcodec-uninstalled.pc  libavcodec.pc
ardrone_autonomy/ARDroneLib/FFMPEG/ffmpeg/libavdevice/: libavdevice-uninstalled.pc  libavdevice.pc
ardrone_autonomy/ARDroneLib/FFMPEG/ffmpeg/libavfilter/: libavfilter-uninstalled.pc  libavfilter.pc
ardrone_autonomy/ARDroneLib/FFMPEG/ffmpeg/libavformat/: libavformat-uninstalled.pc  libavformat.pc
ardrone_autonomy/ARDroneLib/FFMPEG/ffmpeg/libavutil/: libavutil-uninstalled.pc  libavutil.pc
ardrone_autonomy/ARDroneLib/FFMPEG/ffmpeg/libswscale/: libswscale-uninstalled.pc  libswscale.pc
program1/: CMakeLists.txt  package.xml
program1/launch/: robot_learning.launch
program1/src/: camera_vision.cpp
